fixtures/frontend/milestone-1/invalid/source_unknown_option.aivi
@source timer.every 100 with {
    unknown: True
}
sig tick : Signal Unit
